# tba-types-generator

./: .gitignore  README.md  generate.py  generate_all.py  pyproject.toml  requirements.txt  tba_extended_parser.py  tba_parser.py  typescript_builder.py  url_getter.py
override/: harmony_post.ts  override.jsonc  preamble.ts  preamble_harmony16up.ts  preamble_harmony24up.ts  preamble_harmony_extended.ts  preamble_sbpro.ts
tba_types_generator/: __init__.py  typescript_builder.py  url_getter.py
tba_types_generator/parser/: tba_extended_parser.py  tba_parser.py
